# beatles-ai

./: .gitignore  README.md  neural-net.sln  run.bat  test.txt
Data/: readme.txt
Data/ringo/: readme.txt
Data/training_data/: main.py
neural-net/: CMakeLists.txt  Makefile  audio.cpp  audio.hpp  helper.cpp  helper.hpp  layer.hpp  main.cpp  neural-net.vcxproj  neural_net.cpp  neural_net.hpp  neuron.cpp  neuron.hpp  training.cpp  training.hpp
